# robothon2022_tree

./: CMakeLists.txt  package.xml
config/: exec_params.yaml  extract_batteries_AA.yaml  extract_coin_battery.yaml  go_home.yaml  go_to_location_server.yaml  insert_battery.yaml  pc_ewaste.yaml  pick_and_insert_ethernet.yaml  pick_and_insert_key.yaml  pick_battery.yaml  press_blue_button.yaml  press_red_button.yaml  tasks_config.yaml
include/robothon2022_tree/: bt_goto_class.h
launch/: load_locations.launch  load_params.launch  run_pc_ewaste.launch  run_tree.launch
src/: run_pc_ewaste.cpp  run_tree.cpp
src/robothon2022_tree/: bt_goto_class.cpp
tree/: extract_batteries_AA.xml  extract_battieries_AA.xml  extract_coin_battery.xml  go_home.xml  insert_first_battery.xml  insert_second_battery.xml  pc_ewaste_tree.xml  pick_and_insert_ethernet.xml  pick_and_insert_key.xml  pick_first_battery.xml  pick_second_battery.xml  press_blue_button.xml  press_red_button.xml  remove_and_insert_batteries_AA.xml  robothon2022_tree.xml
