<?xml version="1.0"?>
<package format="2">
  <name>robothon2022_tree</name>
  <version>0.0.0</version>
  <description>The robothon2022_tree package</description>

  <maintainer email="riemann@todo.todo">riemann</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>action_learning_tests</depend>
  <depend>std_msgs</depend>
  <depend>skills_executer</depend>
  <depend>skills_executer_msgs</depend>
  <depend>manipulation_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
